--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,8 @@ label{font-family:'Lato', sans-serif; font-size: 14px; font-weight:700 ;margin: 
 
 .bpTitle {font-size: 18px;}
 
+div {
+    text-align:center;
+    width:100%;
+  }
+
