--- a/css/style.css
+++ b/css/style.css
@@ -97,5 +97,6 @@ label{font-family:'Lato', sans-serif; font-size: 14px; font-weight:700 ;margin: 
 div {
     text-align:center;
     width:100%;
+    padding:50;
   }
 
